--- a/vignettes/read_USGS_functions.Rmd
+++ b/vignettes/read_USGS_functions.Rmd
@@ -42,7 +42,7 @@ Each new "API endpoint" will deliver a new type of USGS data. Currently the avai
 
 * Any column that is returned can also be queried on! The main `dataRetrieval` functions will take vector inputs. Each query is appended as a boolean AND. For instance, if you ask for a vector of monitoring location ids and a vector of parameter codes, you will get data back for just those monitoring locations AND the specified parameter codes. Towards the bottom of this document, we'll discuss ways to make more specific queries using "Common Query Language" or CQL.
 
-* Data is returned with a "geometry" column, which is a simple feature object, allowing the data to be integrated with the `sf` package and associated geospatial workflows.
+* **Provides [Simple Features](https://en.wikipedia.org/wiki/Simple_Features) functionality**: data is returned with a "geometry" column, which is a simple feature object, allowing the data to be integrated with the [`sf`](https://r-spatial.github.io/sf/) package and associated geospatial workflows.
 
 * When you look at the help file for the new functions, you’ll also notice there are many more arguments. These are mostly set by default to NA. You **DO NOT** need to (and most likely should not!) specify all of these parameters. 
 
